ACS-8439 Update to only use Java 11 features.